--- a/Week-3/AssignmentSubmission/public/index.html
+++ b/Week-3/AssignmentSubmission/public/index.html
@@ -36,7 +36,7 @@
                 <label for="file-upload" class="custom-file-upload">
                     <i class="fa fa-cloud-upload"></i> Choose file
                 </label>
-                <input type="file" accept="application/pdf" name="userfile" id="file-upload">
+                <input type="file" accept="application/pdf, .jpg, .jpeg, .png, .docx, .doc, .xlsx, .zip, .rar" name="userfile" id="file-upload">
              
             </div>
             
